Fix issue where the home page intro box is stretching to 800px

--- a/css/site.css
+++ b/css/site.css
@@ -57,7 +57,7 @@ body.loaded .navbar {
   opacity: 0;
   color: white;
   text-align: left;
-  width: 800px;
+  max-width: 800px;
 
   -webkit-transition: opacity 0.8s ease-out;
   -moz-transition: opacity 0.8s ease-out;
